--- a/Horseshoe.NET/Horseshoe.NET.csproj
+++ b/Horseshoe.NET/Horseshoe.NET.csproj
@@ -58,6 +58,16 @@
     <Compile Include="Collections\Iteration.cs" />
     <Compile Include="Collections\IterationException.cs" />
     <Compile Include="Collections\PrunePolicy.cs" />
+    <Compile Include="ConsoleX\ConsoleApp.cs" />
+    <Compile Include="ConsoleX\ConsoleUtil.cs" />
+    <Compile Include="ConsoleX\CustomMenuItem.cs" />
+    <Compile Include="ConsoleX\Extensions.cs" />
+    <Compile Include="ConsoleX\ListIndexPolicy.cs" />
+    <Compile Include="ConsoleX\LRUniformer.cs" />
+    <Compile Include="ConsoleX\MenuSelection.cs" />
+    <Compile Include="ConsoleX\Navigation.cs" />
+    <Compile Include="ConsoleX\Routine.cs" />
+    <Compile Include="ConsoleX\Title.cs" />
     <Compile Include="Credential.cs" />
     <Compile Include="Cryptography\CryptoOptions.cs" />
     <Compile Include="Cryptography\CryptoUtil.cs" />
