--- a/TestConsole/App.config
+++ b/TestConsole/App.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <appSettings>
+    <add key="Horseshoe.NET:Email:SmtpServer" value="smtprelay01.derbyllc.com" />
+  </appSettings>
+  <startup> 
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
 </configuration>
