IO - Merged Email, fixed ReportingServices

--- a/Horseshoe.NET/Horseshoe.NET.csproj
+++ b/Horseshoe.NET/Horseshoe.NET.csproj
@@ -85,16 +85,16 @@
     <Compile Include="Cryptography\Settings.cs" />
     <Compile Include="DateDiff.cs" />
     <Compile Include="DateUtil.cs" />
-    <Compile Include="Email\HtmlEmail.cs" />
-    <Compile Include="Email\PlainEmail.cs" />
-    <Compile Include="Email\Settings.cs" />
-    <Compile Include="Email\SMS\Carrier.cs" />
-    <Compile Include="Email\SMS\TextMessage.cs" />
-    <Compile Include="Email\SMS\Settings.cs" />
-    <Compile Include="Email\SMS\SMSUtil.cs" />
-    <Compile Include="Email\SMS\TextMessageSent.cs" />
-    <Compile Include="Email\SmtpConnectionInfo.cs" />
-    <Compile Include="Email\SmtpUtil.cs" />
+    <Compile Include="IO\Email\HtmlEmail.cs" />
+    <Compile Include="IO\Email\PlainEmail.cs" />
+    <Compile Include="IO\Email\Settings.cs" />
+    <Compile Include="IO\Email\SMS\Carrier.cs" />
+    <Compile Include="IO\Email\SMS\TextMessage.cs" />
+    <Compile Include="IO\Email\SMS\Settings.cs" />
+    <Compile Include="IO\Email\SMS\SMSUtil.cs" />
+    <Compile Include="IO\Email\SMS\TextMessageSent.cs" />
+    <Compile Include="IO\Email\SmtpConnectionInfo.cs" />
+    <Compile Include="IO\Email\SmtpUtil.cs" />
     <Compile Include="Events\EasyNotifier.cs" />
     <Compile Include="ExceptionInfo.cs" />
     <Compile Include="Extensions.cs" />
