Added Column.IsNullable and IsMappable.

--- a/Horseshoe.NET/Horseshoe.NET.csproj
+++ b/Horseshoe.NET/Horseshoe.NET.csproj
@@ -99,21 +99,21 @@
     <Compile Include="ExceptionInfo.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="CustomMapping.cs" />
-    <Compile Include="IO\FileImport2\NoMapColumn.cs" />
-    <Compile Include="IO\FileImport2\NullableColumn.cs" />
+    <Compile Include="IO\FileImport\NoMapColumn.cs" />
+    <Compile Include="IO\FileImport\NullableColumn.cs" />
     <Compile Include="TemplatePart.cs" />
-    <Compile Include="IO\FileImport2\BlankRowMode.cs" />
-    <Compile Include="IO\FileImport2\Column.cs" />
-    <Compile Include="IO\FileImport2\DataType.cs" />
+    <Compile Include="IO\FileImport\BlankRowMode.cs" />
+    <Compile Include="IO\FileImport\Column.cs" />
+    <Compile Include="IO\FileImport\DataType.cs" />
     <Compile Include="IO\DirectoryCopyMode.cs" />
-    <Compile Include="IO\FileImport2\Extensions.cs" />
+    <Compile Include="IO\FileImport\Extensions.cs" />
     <Compile Include="IO\FileSizeUnit.cs" />
     <Compile Include="IO\FileType.cs" />
     <Compile Include="IO\FileUtil.cs" />
-    <Compile Include="IO\FileImport2\Import.cs" />
-    <Compile Include="IO\FileImport2\ImportDelimited.cs" />
-    <Compile Include="IO\FileImport2\ImportFixedWidth.cs" />
-    <Compile Include="IO\FileImport2\ImportUtil.cs" />
+    <Compile Include="IO\FileImport\Import.cs" />
+    <Compile Include="IO\FileImport\ImportDelimited.cs" />
+    <Compile Include="IO\FileImport\ImportFixedWidth.cs" />
+    <Compile Include="IO\FileImport\ImportUtil.cs" />
     <Compile Include="IO\ReportingServices\ReportException.cs" />
     <Compile Include="IO\ReportingServices\ReportFormat.cs" />
     <Compile Include="IO\ReportingServices\ReportServer.cs" />
