--- a/Horseshoe.NET/Horseshoe.NET.csproj
+++ b/Horseshoe.NET/Horseshoe.NET.csproj
@@ -93,10 +93,10 @@
     <Compile Include="Db\Extensions.cs" />
     <Compile Include="Db\Filter.cs" />
     <Compile Include="Db\FilterMode.cs" />
-    <Compile Include="Db\Internal\SystemValue.cs" />
+    <Compile Include="Db\SystemValue.cs" />
     <Compile Include="Db\Parameter.cs" />
+    <Compile Include="Db\RawSql.cs" />
     <Compile Include="Db\ScalarReaderParser.cs" />
-    <Compile Include="Dates\DateDiff.cs" />
     <Compile Include="Dates\DateUtil.cs" />
     <Compile Include="IO\Email\HtmlEmail.cs" />
     <Compile Include="IO\Email\PlainEmail.cs" />
