--- a/Horseshoe.NET.Odbc/Horseshoe.NET.Odbc.csproj
+++ b/Horseshoe.NET.Odbc/Horseshoe.NET.Odbc.csproj
@@ -48,7 +48,7 @@
     <Compile Include="OdbcUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query.cs" />
-    <Compile Include="Settings.cs" />
+    <Compile Include="OdbcSettings.cs" />
     <Compile Include="Update.cs" />
   </ItemGroup>
   <ItemGroup>
