--- a/Horseshoe.NET.SqlDb/Horseshoe.NET.SqlDb.csproj
+++ b/Horseshoe.NET.SqlDb/Horseshoe.NET.SqlDb.csproj
@@ -58,7 +58,7 @@
     <Compile Include="Meta\SqlServerTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query.cs" />
-    <Compile Include="Settings.cs" />
+    <Compile Include="SqlSettings.cs" />
     <Compile Include="SqlConnectionInfo.cs" />
     <Compile Include="SqlUtil.cs" />
     <Compile Include="StoredProcedure.cs" />
