--- a/Horseshoe.NET/Horseshoe.NET.csproj
+++ b/Horseshoe.NET/Horseshoe.NET.csproj
@@ -57,7 +57,7 @@
     <Compile Include="Bootstrap\Bootstrap4.cs" />
     <Compile Include="Bootstrap\ExceptionRenderingPolicy.cs" />
     <Compile Include="Bootstrap\Extensions.cs" />
-    <Compile Include="Bootstrap\Settings.cs" />
+    <Compile Include="Bootstrap\BootstrapSettings.cs" />
     <Compile Include="Collections\CollectionUtil.cs" />
     <Compile Include="Collections\Extensions.cs" />
     <Compile Include="Collections\ImmutableDictionary.cs" />
@@ -122,7 +122,7 @@
     <Compile Include="OleDb\OleDbConnectionInfo.cs" />
     <Compile Include="OleDb\OleDbUtil.cs" />
     <Compile Include="OleDb\Query.cs" />
-    <Compile Include="OleDb\Settings.cs" />
+    <Compile Include="OleDb\OleDbSettings.cs" />
     <Compile Include="OleDb\Update.cs" />
     <Compile Include="TemplatePart.cs" />
     <Compile Include="IO\FileImport\BlankRowMode.cs" />
@@ -141,10 +141,10 @@
     <Compile Include="IO\ReportingServices\ReportFormat.cs" />
     <Compile Include="IO\ReportingServices\ReportServer.cs" />
     <Compile Include="IO\ReportingServices\ReportUtil.cs" />
-    <Compile Include="IO\ReportingServices\Settings.cs" />
+    <Compile Include="IO\ReportingServices\ReportSettings.cs" />
     <Compile Include="IO\WebServices\Enums\ResponseStatus.cs" />
     <Compile Include="IO\WebServices\WSResponse.cs" />
-    <Compile Include="IO\WebServices\Settings.cs" />
+    <Compile Include="IO\WebServices\WebServiceSettings.cs" />
     <Compile Include="IO\WebServices\WebService.cs" />
     <Compile Include="IO\WebServices\WebServiceUtil.cs" />
     <Compile Include="Lib.cs" />
