--- a/Horseshoe.NET.OracleDb/Horseshoe.NET.OracleDb.csproj
+++ b/Horseshoe.NET.OracleDb/Horseshoe.NET.OracleDb.csproj
@@ -73,6 +73,7 @@
     <ProjectReference Include="..\Horseshoe.NET\Horseshoe.NET.csproj">
       <Project>{2c647857-6298-47c1-97bc-ad180d55dd33}</Project>
       <Name>Horseshoe.NET</Name>
+      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
