--- a/Horseshoe.NET/Horseshoe.NET.csproj
+++ b/Horseshoe.NET/Horseshoe.NET.csproj
@@ -120,8 +120,10 @@
     <Compile Include="IO\FileImport\NoMapColumn.cs" />
     <Compile Include="IO\FileImport\NullableColumn.cs" />
     <Compile Include="IO\Ftp\Ftp.cs" />
+    <Compile Include="IO\Ftp\FtpConnectionInfo.cs" />
     <Compile Include="IO\Ftp\FtpFileMasks.cs" />
     <Compile Include="IO\Ftp\FtpSettings.cs" />
+    <Compile Include="IO\Ftp\FtpUtil.cs" />
     <Compile Include="OleDb\Delete.cs" />
     <Compile Include="OleDb\Execute.cs" />
     <Compile Include="OleDb\Insert.cs" />
