--- a/Horseshoe.NET.OracleDb (Standard)/Horseshoe.NET.OracleDb (Standard).csproj
+++ b/Horseshoe.NET.OracleDb (Standard)/Horseshoe.NET.OracleDb (Standard).csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Horseshoe.NET.OracleDb</RootNamespace>
-    <Description>A typesafe, object-oriented database helper for Oracle</Description>
+    <Description>A typesafe, object-oriented ADO.NET-based native Oracle data access utility</Description>
     <Copyright>Copyright © 2020 Greenhazel Studio</Copyright>
     <Version>1.0.0</Version>
     <Authors>Carl Thomas</Authors>
