--- a/Horseshoe.NET.SqlDb (Standard)/Horseshoe.NET.SqlDb (Standard).csproj
+++ b/Horseshoe.NET.SqlDb (Standard)/Horseshoe.NET.SqlDb (Standard).csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Horseshoe.NET.SqlDb</RootNamespace>
-    <Description>A typesafe, object-oriented database helper for SQL Server</Description>
+    <Description>A typesafe, object-oriented ADO.NET-based SQL Server data access utility</Description>
     <Authors>Carl Thomas</Authors>
     <Company>Greenhazel Studio</Company>
     <Version>1.0.0</Version>
