--- a/Horseshoe.NET/Horseshoe.NET.csproj
+++ b/Horseshoe.NET/Horseshoe.NET.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Db\ConnectionStringPart.cs" />
     <Compile Include="Db\DataUtil.cs" />
     <Compile Include="Db\DbProduct.cs" />
+    <Compile Include="Db\Delegates.cs" />
     <Compile Include="Db\Extensions.cs" />
     <Compile Include="Db\Filter.cs" />
     <Compile Include="Db\FilterMode.cs" />
@@ -99,18 +100,19 @@
     <Compile Include="Db\RawSql.cs" />
     <Compile Include="Db\ScalarReaderParser.cs" />
     <Compile Include="Dates\DateUtil.cs" />
+    <Compile Include="IO\FileImport\Delegates.cs" />
+    <Compile Include="IO\Ftp\Delegates.cs" />
     <Compile Include="StringList.cs" />
     <Compile Include="IO\Email\HtmlEmail.cs" />
     <Compile Include="IO\Email\PlainEmail.cs" />
     <Compile Include="IO\Email\EmailSettings.cs" />
-    <Compile Include="IO\Email\Sms\Carrier.cs" />
-    <Compile Include="IO\Email\Sms\TextMessage.cs" />
-    <Compile Include="IO\Email\Sms\SmsSettings.cs" />
-    <Compile Include="IO\Email\Sms\SmsUtil.cs" />
-    <Compile Include="IO\Email\Sms\TextMessageSent.cs" />
+    <Compile Include="IO\Sms\Carrier.cs" />
+    <Compile Include="IO\Sms\TextMessage.cs" />
+    <Compile Include="IO\Sms\SmsSettings.cs" />
+    <Compile Include="IO\Sms\SmsUtil.cs" />
+    <Compile Include="IO\Sms\Delegates.cs" />
     <Compile Include="IO\Email\SmtpConnectionInfo.cs" />
     <Compile Include="IO\Email\SmtpUtil.cs" />
-    <Compile Include="Events\EasyNotifier.cs" />
     <Compile Include="ExceptionInfo.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="CustomMapping.cs" />
@@ -167,6 +169,7 @@
     <Compile Include="ReconstitutedException.cs" />
     <Compile Include="Text\AutoTruncate.cs" />
     <Compile Include="Text\Comparison.cs" />
+    <Compile Include="Text\Delegates.cs" />
     <Compile Include="Text\Deserialize.cs" />
     <Compile Include="Text\Direction.cs" />
     <Compile Include="Text\Extensions.cs" />
@@ -174,7 +177,6 @@
     <Compile Include="Text\SearchCriteria.cs" />
     <Compile Include="Text\Serialize.cs" />
     <Compile Include="Text\TextClean.cs" />
-    <Compile Include="Text\TextCleanCharacterIdentified.cs" />
     <Compile Include="Text\TextCleanMode.cs" />
     <Compile Include="Text\TextUtil.cs" />
     <Compile Include="Text\TruncateMarker.cs" />
