--- a/Horseshoe.NET.SecureIO/Horseshoe.NET.SecureIO.csproj
+++ b/Horseshoe.NET.SecureIO/Horseshoe.NET.SecureIO.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sftp\SftpConnectionInfo.cs" />
     <Compile Include="Sftp\SftpSettings.cs" />
     <Compile Include="Sftp\SftpUtil.cs" />
     <Compile Include="Sftp\Sftp.cs" />
