--- a/Horseshoe.NET.SecureIO (Standard)/Horseshoe.NET.SecureIO (Standard).csproj
+++ b/Horseshoe.NET.SecureIO (Standard)/Horseshoe.NET.SecureIO (Standard).csproj
@@ -15,7 +15,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Horseshoe.NET (Standard)\Horseshoe.NET (Standard).csproj" />
+    <ProjectReference Include="..\Horseshoe.NET (Standard)\Horseshoe.NET (Standard).csproj">
+      <Private>false</Private>
+    </ProjectReference>
   </ItemGroup>
 
 </Project>
