--- a/Horseshoe.NET/Horseshoe.NET.csproj
+++ b/Horseshoe.NET/Horseshoe.NET.csproj
@@ -104,6 +104,8 @@
     <Compile Include="IO\FileImport\Delegates.cs" />
     <Compile Include="IO\Ftp\Delegates.cs" />
     <Compile Include="IO\NamedMemoryStream.cs" />
+    <Compile Include="IO\WebServices\Extensions.cs" />
+    <Compile Include="IO\WebServices\WSResponseHttpMeta.cs" />
     <Compile Include="Machine.cs" />
     <Compile Include="StringList.cs" />
     <Compile Include="IO\Email\HtmlEmail.cs" />
