--- a/Horseshoe.NET/Horseshoe.NET.csproj
+++ b/Horseshoe.NET/Horseshoe.NET.csproj
@@ -103,9 +103,10 @@
     <Compile Include="Dates\DateUtil.cs" />
     <Compile Include="IO\FileImport\Delegates.cs" />
     <Compile Include="IO\Ftp\Delegates.cs" />
+    <Compile Include="IO\Http\WebDocument.cs" />
     <Compile Include="IO\NamedMemoryStream.cs" />
-    <Compile Include="IO\WebServices\Extensions.cs" />
-    <Compile Include="IO\WebServices\WSResponseHttpMeta.cs" />
+    <Compile Include="IO\Http\Extensions.cs" />
+    <Compile Include="IO\Http\HttpResponseMetadata.cs" />
     <Compile Include="Machine.cs" />
     <Compile Include="StringList.cs" />
     <Compile Include="IO\Email\HtmlEmail.cs" />
@@ -157,11 +158,11 @@
     <Compile Include="IO\ReportingServices\ReportServer.cs" />
     <Compile Include="IO\ReportingServices\ReportUtil.cs" />
     <Compile Include="IO\ReportingServices\ReportSettings.cs" />
-    <Compile Include="IO\WebServices\Enums\ResponseStatus.cs" />
-    <Compile Include="IO\WebServices\WSResponse.cs" />
-    <Compile Include="IO\WebServices\WebServiceSettings.cs" />
-    <Compile Include="IO\WebServices\WebService.cs" />
-    <Compile Include="IO\WebServices\WebServiceUtil.cs" />
+    <Compile Include="IO\Http\Enums\WebServiceResponseStatus.cs" />
+    <Compile Include="IO\Http\WebServiceResponse.cs" />
+    <Compile Include="IO\Http\WebServiceSettings.cs" />
+    <Compile Include="IO\Http\WebService.cs" />
+    <Compile Include="IO\Http\WebServiceUtil.cs" />
     <Compile Include="Lib.cs" />
     <Compile Include="Logic.cs" />
     <Compile Include="NumberUtil.cs" />
