--- a/Horseshoe.NET.ActiveDirectory/Horseshoe.NET.ActiveDirectory.csproj
+++ b/Horseshoe.NET.ActiveDirectory/Horseshoe.NET.ActiveDirectory.csproj
@@ -50,6 +50,7 @@
     <Compile Include="ObjectClass.cs" />
     <Compile Include="OUInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ADSettings.cs" />
     <Compile Include="UserInfo.cs" />
     <Compile Include="UserProperty.cs" />
   </ItemGroup>
