--- a/TestConsole/App.config
+++ b/TestConsole/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="Horseshoe.NET:ActiveDirectory.Domain" value="bla" />
+    <add key="Horseshoe.NET:ActiveDirectory.Domain" value="lgeenergy.int" />
   </appSettings>
   <startup> 
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
