--- a/Horseshoe.NET.ActiveDirectory (Standard)/Horseshoe.NET.ActiveDirectory (Standard).csproj
+++ b/Horseshoe.NET.ActiveDirectory (Standard)/Horseshoe.NET.ActiveDirectory (Standard).csproj
@@ -7,7 +7,9 @@
     <Authors>Carl Thomas</Authors>
     <Company>Greenhazel Studio</Company>
     <Description>Services for Active Directory authentication and LDAP querying</Description>
-    <Version>1.0.9.1</Version>
+    <Version>1.0.9.2</Version>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>assembly-signing-key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
