--- a/Horseshoe.NET.Excel (Standard)/Horseshoe.NET.Excel (Standard).csproj
+++ b/Horseshoe.NET.Excel (Standard)/Horseshoe.NET.Excel (Standard).csproj
@@ -7,7 +7,9 @@
     <Authors>Carl Thomas</Authors>
     <Company>Greenhazel Studio</Company>
     <Copyright>Copyright © 2020 Greenhazel Studio</Copyright>
-    <Version>1.0.9.1</Version>
+    <Version>1.0.9.2</Version>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>assembly-signing-key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
