--- a/Horseshoe.NET.Mvc (Core 2.1)/Horseshoe.NET.Mvc (Core 2.1).csproj
+++ b/Horseshoe.NET.Mvc (Core 2.1)/Horseshoe.NET.Mvc (Core 2.1).csproj
@@ -3,11 +3,13 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <RootNamespace>Horseshoe.NET.Mvc</RootNamespace>
-    <Version>1.0.9.1</Version>
+    <Version>1.0.9.2</Version>
     <Authors>Carl Thomas</Authors>
     <Company>Greenhazel Studio</Company>
     <Copyright>Copyright © 2020 Greenhazel Studio</Copyright>
     <Description>Adds functionality (e.g. bootstrap alerts) to MVC applications (see documentation)</Description>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>assembly-signing-key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
