--- a/Horseshoe.NET.Odbc (Standard)/Horseshoe.NET.Odbc (Standard).csproj
+++ b/Horseshoe.NET.Odbc (Standard)/Horseshoe.NET.Odbc (Standard).csproj
@@ -6,8 +6,10 @@
     <Description>A typesafe, object-oriented ADO.NET-based ODBC data access utility</Description>
     <Authors>Carl Thomas</Authors>
     <Company>Greenhazel Studio</Company>
-    <Version>1.0.9.1</Version>
+    <Version>1.0.9.2</Version>
     <Copyright>Copyright © 2020 Greenhazel Studio</Copyright>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>assembly-signing-key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
