--- a/Horseshoe.NET.OracleDb (Standard)/Horseshoe.NET.OracleDb (Standard).csproj
+++ b/Horseshoe.NET.OracleDb (Standard)/Horseshoe.NET.OracleDb (Standard).csproj
@@ -5,9 +5,11 @@
     <RootNamespace>Horseshoe.NET.OracleDb</RootNamespace>
     <Description>A typesafe, object-oriented ADO.NET-based native Oracle data access utility</Description>
     <Copyright>Copyright © 2020 Greenhazel Studio</Copyright>
-    <Version>1.0.9.1</Version>
+    <Version>1.0.9.2</Version>
     <Authors>Carl Thomas</Authors>
     <Company>Greenhazel Studio</Company>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>assembly-signing-key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
