--- a/Horseshoe.NET.SecureIO (Standard)/Horseshoe.NET.SecureIO (Standard).csproj
+++ b/Horseshoe.NET.SecureIO (Standard)/Horseshoe.NET.SecureIO (Standard).csproj
@@ -6,8 +6,10 @@
     <Authors>Carl Thomas</Authors>
     <Company>Greenhazel Studio</Company>
     <Copyright>Copyright © 2020 Greenhazel Studio</Copyright>
-    <Version>1.0.9.1</Version>
+    <Version>1.0.9.2</Version>
     <Description>Adds SFTP to the Horseshoe.NET suite (uses SSH.NET)</Description>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>assembly-signing-key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
