--- a/Horseshoe.NET.SecureIO/Horseshoe.NET.SecureIO.csproj
+++ b/Horseshoe.NET.SecureIO/Horseshoe.NET.SecureIO.csproj
@@ -30,6 +30,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>assembly-signing-key.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Renci.SshNet, Version=2016.1.0.0, Culture=neutral, PublicKeyToken=1cee9f8bde3db106, processorArchitecture=MSIL">
       <HintPath>..\packages\SSH.NET.2016.1.0\lib\net40\Renci.SshNet.dll</HintPath>
@@ -52,6 +58,7 @@
     <Compile Include="Sftp\Sftp.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="assembly-signing-key.snk" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
