--- a/Horseshoe.NET.SqlDb (Standard)/Horseshoe.NET.SqlDb (Standard).csproj
+++ b/Horseshoe.NET.SqlDb (Standard)/Horseshoe.NET.SqlDb (Standard).csproj
@@ -6,12 +6,15 @@
     <Description>A typesafe, object-oriented ADO.NET-based SQL Server data access utility</Description>
     <Authors>Carl Thomas</Authors>
     <Company>Greenhazel Studio</Company>
-    <Version>1.0.9.1</Version>
+    <Version>1.0.9.2</Version>
     <Copyright>Copyright © 2020 Greenhazel Studio</Copyright>
+    <SignAssembly>true</SignAssembly>
+    <DelaySign>false</DelaySign>
+    <AssemblyOriginatorKeyFile>assembly-signing-key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
   <ItemGroup>
